# antisafelinks

./: README.md  pyproject.toml
src/antisafelinks/: __init__.py  safelink_decoder.py
